# code-review-agent

./: .gitignore  AGENTS.md  README.md  changes.patch  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: CodeReviewAgent_2.0_TODO.md  CodeReviewAgent_2.0实现计划.md  CodeReviewAgent_2.0项目方案.md  architecture_overview.md  context_budget_phase2_phase3_impl.md  evidence_explained.md  gpt推荐的解决方案.md  how_to_read_the_code.md  iterative_loop_impl.md  iterative_loop_review_result.md  live_review_iteration_notes.md  read_phase_56.md  user_guide.md
eval/: README.md
examples/: README.md
runs/: args.json  config.yaml  history (1).json
scripts/: _debug.ps1  _logging.ps1  install-skills.ps1  review-live.env.example  review-live.ps1  run-all-llm.ps1  run-eval-hybrid.ps1  run-hygiene-llm.ps1  run-map.ps1  run-review-llm.ps1
tests/: README.md  test_cli.py  test_context_repo_map.py  test_context_test_discovery.py  test_eval_metrics.py  test_hygiene_classifier.py  test_hygiene_evidence.py  test_hygiene_llm_classifier.py  test_hygiene_planner.py  test_hygiene_scanner.py  test_hygiene_taxonomy.py  test_models.py  test_output_review_markdown.py  test_review_agents_fake.py  test_review_changed_entity.py  test_review_context_budget.py  test_review_diff_parser.py  test_review_evidence.py  test_review_filter.py  test_review_loop.py  test_review_pipeline.py  test_review_risk.py  test_review_rules.py  test_review_schema.py  test_review_verifier.py
workspace/: analyze_hf_codereview_metrics.py  run_hf_codereview_live.py  run_qodo_pr_review_bench_live.py
(+660 files in other folders)
