[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-agent"
version = "0.1.0"
description = "A Code Review Agent Harness for AI-assisted development workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Code Review Agent Harness" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0"
]

[project.scripts]
code-review-agent = "code_review_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

